# rshc

./: .gitignore  .releaserc  .version-hook.sh  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
benches/: crypto_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_payload_deserialize.rs  fuzz_payload_from_exe.rs  fuzz_rc4.rs
src/: aes.rs  chacha.rs  cli.rs  codegen.rs  compiler.rs  lib.rs  main.rs  native.rs  noise.rs  payload.rs  rc4.rs  rtc_code.c  script.rs  security.rs  shell_db.rs
test/: match  test.bash  ttest.sh
tests/: integration.rs
tests/scripts/: args.sh  zsh_test.sh
