[package]
name = "rshc"
version = "1.3.4"
edition = "2021"

[lib]
name = "rshc"
path = "src/lib.rs"

[[bin]]
name = "rshc"
path = "src/main.rs"

[[bin]]
name = "rshc-runner"
path = "src/bin/rshc-runner.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
chrono = "0.4"
anyhow = "1"
libc = "0.2"
