[package]
name = "rshc"
version = "1.4.2"
edition = "2021"

[lib]
name = "rshc"
path = "src/lib.rs"

[[bin]]
name = "rshc"
path = "src/main.rs"

[[bin]]
name = "rshc-runner"
path = "src/bin/rshc-runner.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
chrono = "0.4"
anyhow = "1"
libc = "0.2"
# Crypto dependencies pinned to exact versions for supply chain security
sha2 = "=0.10.9"
flate2 = "1"
aes-gcm = "=0.10.3"
chacha20poly1305 = "=0.10.1"
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }
argon2 = "=0.5.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false
